networkpolicy-allow-ingress-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-ingress
spec:
  podSelector:
    matchLabels:
      networkpolicy: allow-ingress-controller-ingress
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          name: nginx-ingress-microk8s
